[package]
name = "toolkit"
version = "0.1.0"
edition = "2018"
authors = ["codehackfox@gmail.com"]
description = "took kit"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
iced = {version = "0.3", features =["qr_code","canvas","tokio"]}
itertools = "0.10"
rand = "0.8"
uuid = {version="0.8",features = ["serde", "v4"]}
